force-app/main/default/objects/Meta_Ad_Enrichment_Request__e/Meta_Ad_Enrichment_Request__e.object-meta.xml
<CustomObject>
    <description
  >Solicitação assíncrona para enriquecer anúncios Meta fora do contexto do usuário de site público.</description>
    <label>Solicitação de Enriquecimento Meta Ads</label>
    <pluralLabel>Solicitações de Enriquecimento Meta Ads</pluralLabel>
</CustomObject>