force-app/main/default/objects/Meta_Ad_Enrichment_Request__e/fields/CTWA_CLID__c.field-meta.xml
<CustomField>
    <fullName>CTWA_CLID__c</fullName>
    <label>CTWA CLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>