force-app/main/default/objects/Meta_Ad_Enrichment_Request__e/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <label>ID do Lead</label>
    <length>18</length>
    <type>Text</type>
</CustomField>