force-app/main/default/objects/Meta_Ad_Enrichment_Request__e/fields/Meta_Ad_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Ad_ID__c</fullName>
    <label>ID do Anúncio Meta</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>